src/theme/components/Workbench/Header/Cards/styles.module.css
.card {
    width: 60%;
    grid-row-start: 1;
    grid-column-start: 1;
    transition: transform 0.4s ease;
}

.card:hover {
    opacity: 1;
}

.card__clicked {
    opacity: 1;
    transform: translateX(0) scale(1);
    z-index: 1;
}

.card__notClickedLeft {
    opacity: 0.4;
    transform: translate(-40%, 8px) scale(0.7);
    z-index: 0;
}

.card__notClickedRight {
    opacity: 0.4;
    transform: translate(40%, 8px) scale(0.7);
    z-index: 0;
}

